--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vesa-workout-tracker",
   "version": "1.0.0",
+  "type": "module",
   "description": "Минималистичный дневник спортивных тренировок",
-  "main": "index.html",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,16 +12,16 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "lucide-react": "^0.263.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "lucide-react": "^0.460.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.3.9",
-    "vite-plugin-pwa": "^0.16.4",
-    "tailwindcss": "^3.3.2",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24"
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^5.4.11",
+    "vite-plugin-pwa": "^0.20.5",
+    "tailwindcss": "^3.4.15",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49"
   }
 }
